with latest nextjs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "next": "^10.0.0",
+    "next": "latest",
     "next-on-netlify": "^2.8.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
