--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
   functions = "out_functions"
   publish   = "out_publish"
   command   = "npm run build"
+  
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
