--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
+  "private": true,
   "name": "with-typescript",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "postbuild": "next-on-netlify",
-    "start": "next start",
-    "type-check": "tsc"
-  },
+  "scripts": {},
   "dependencies": {
-    "next": "^10.0.0",
-    "next-on-netlify": "^2.8.6",
+    "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "lerna": "^3.20.2",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "typescript": "4.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ]
 }
