--- a/apps/api_one/netlify.toml
+++ b/apps/api_one/netlify.toml
@@ -8,7 +8,7 @@
   CONTEXT_ACTIVE_ENV = "production"
 
 [dev]
-  port = 3002
+  port = 3001
   autoLaunch = false
 
 [context.dev.environment]
@@ -22,3 +22,9 @@
 
 [[plugins]]
   package = "../../tools/plugins/netlify/skip-build"
+
+[[redirects]]
+  from = "/api"
+  to = "/.netlify/functions/api"
+  status = 200
+  force = true
