Spike/with monorepo setup (#1)
with monorepo support test pull request merge to develop

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/**/node_modules
 /.pnp
 .pnp.js
 
@@ -9,11 +10,13 @@
 /coverage
 
 # next.js
-/.next/
-/out/
+**/.next/
+**/out/
+**/built-functions/
 
 # production
 /build
+**/build
 
 # misc
 .DS_Store
